--- a/index.html
+++ b/index.html
@@ -41,10 +41,8 @@
             SEGUI  BAJANDO Y DE LO CONTRARIO UNITE A NUESTRA PAGINA DE INSTAGRAM @ESTOYENLABASURAMALAGA, ALLI VAS A PODER VER  LAS COSAS QUE  HOY ESTAN PUBLICADAS ARA QUE PUEDAS DARLE UNA SEGUNDA VIDA sit amet consectetur adipisicing elit. Sit assumenda vel harum laboriosam officia quos accusamus nisi tenetur praesentium quam consectetur maiores, nesciunt debitis porro ea corporis voluptatibus cum deleniti? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores minus accusamus itaque facilis ducimus consequuntur debitis dolores quas at quos alias excepturi mollitia tenetur, possimus assumenda iste provident architecto repudiandae.
             </div> 
             <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, dicta molestiae. Laboriosam commodi odio cum totam porro voluptas repudiandae amet dolor expedita? Cumque iste, eius fugit qui dolores neque hic.</div>
-            <div>titulin!</div>
-            <div>otra modificacion</div>
         </section>
-<div>hola</div>
+
         <div class="fondoindex">
         </div>
 
@@ -57,7 +55,7 @@
                 <img src="./assets/escritoriooficina.jpeg" alt="escritoriooficina">
             </div>
             <div class="producto_2 g2">
-                <img src="./assets/espejodebaño.jpeg" alt="Espejodebaño">
+                <img src="./assets/espejodebano.jpeg" alt="Espejodebaño">
             </div>
             <div class="producto_3 g3">
                 <img src="./assets/immesausillajardin.jpeg" alt="mesaysillajardin">            
