cambios nav index

--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -87,13 +87,13 @@
                 </div>
                 <div>
                     <label for="mensaje"></label>
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Contanos que queres reciclar"></textarea>
+                    <textarea  class="textarea" name="" id="" cols="30" rows="10" placeholder="Contanos que queres reciclar"></textarea>
                 </div>
                 <div>
                     <label for="ACEPTACION DE TEMRINOS Y CONDICIONES">Aceptas que nos pongamos en contacto contigo</label>
                     <input type="checkbox" name="acepta" value="1">
                 </div>
-                <div>
+                <div class="buton">
                     <input type="Submit" value="Enviar Mensaje"> 
                     <input type="Reset" value="Limpiar Mensaje">
                 </div>
