animacion a imagenes index

--- a/index.html
+++ b/index.html
@@ -71,22 +71,22 @@
 
         <seccion class="productosencontrados">
             <div class="producto_1 g1">
-                <img src="./assets/escritoriooficina.jpeg" alt="escritoriooficina">
+                <img class="productos" src="./assets/escritoriooficina.jpeg" alt="escritoriooficina">
             </div>
             <div class="producto_2 g2">
-                <img src="./assets/espejodebano.jpeg" alt="Espejodebaño">
+                <img class="productos" src="./assets/espejodebano.jpeg" alt="Espejodebaño">
             </div>
             <div class="producto_3 g3">
-                <img src="./assets/immesausillajardin.jpeg" alt="mesaysillajardin">            
+                <img class="productos" src="./assets/immesausillajardin.jpeg" alt="mesaysillajardin">            
             </div>
             <div class="producto_4 g4">
-                <img src="./assets/juegosillondejardin.jpeg" alt="sillonjardin">
+                <img class="productos" src="./assets/juegosillondejardin.jpeg" alt="sillonjardin">
             </div>
             <div class="producto_5 g5">
-                <img  src="./assets/puertamaderaconherrajes.jpeg" alt="puertaconherrajes">
+                <img class="productos" src="./assets/puertamaderaconherrajes.jpeg" alt="puertaconherrajes">
             </div>
             <div class="producto_6 g6">
-                <img  src="./assets/silla_mesedora.jpeg" alt="sillamesedora">
+                <img class="productos" src="./assets/silla_mesedora.jpeg" alt="sillamesedora">
             </div>
         </seccion>
     </main>
