navbar in all the pages

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body><!--CONTENIDO DE LA PAGINA DONDE TRABAJAREMOS -->
 
-    <header class="header" id="header"><!--ENCABEZADO/MENU DE NAVEGACION-->
+    <header class="header fixed-top" id="header"><!--ENCABEZADO/MENU DE NAVEGACION-->
         <nav class="navbar bg-body-tertiary fixed-top " >
             <div class="container-fluid p-3">
                 <a class="navbar-brand p-3 " href="#">ESTOY EN LA BASURA MáLAGA</a>
