--- a/pages/comoayudar.html
+++ b/pages/comoayudar.html
@@ -1,84 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css"> <!--conexion Con CSS-->
+    <link rel="stylesheet" href="../css/style.css">
+    <!--conexion Con CSS-->
+    <!--LINK AL CDN DE BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
     <title>Como Ayudar</title>
 </head>
 
-<body><!--CONTENIDO DE LA PAGINA DONDE TRABAJAREMOS -->
+<body>
+    <!--CONTENIDO DE LA PAGINA DONDE TRABAJAREMOS -->
 
-    <header class="header" id="header"><!--ENCABEZADO/MENU DE NAVEGACION-->
-        <nav>
-            <ul>
-                <li>
-                    <a href="../index.html"> INICIO </a>
-                </li>
-                <li>
-                    <a href="../pages/contactanos.html"> CONTACTANOS </a>
-                </li>
-                <li>
-                    <a href="../pages/quienessomos.html"> QUIENES SOMOS </a>
-                </li>
-                <li><img src="../assets/logo.png" alt=""></li>
-            </ul>
+
+    <header class="header" id="header">
+        <!--ENCABEZADO/MENU DE NAVEGACION-->
+        <nav class="navbar bg-body-tertiary fixed-top ">
+            <div class="container-fluid p-3">
+                <a class="navbar-brand p-3 " href="#">ESTOY EN LA BASURA MáLAGA</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                    aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title p-3 bg-success" id="offcanvasNavbarLabel">ESTOY EN LA BASURA MáLAGA
+                        </h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+
+                    <div class="offcanvas-body text-success">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item p-3 text-success">
+                                <a href="../index.html">INICIO</a>
+                            </li>
+                            <li class="nav-item p-3 text-success">
+                                <a href="../pages/contactanos.html"> CONTACTANOS </a>
+                            </li>
+                            <li class="nav-item p-3 text-success">
+                                <a href="../pages/quienessomos.html">QUIENES SOMOS</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
         </nav>
     </header>
 
-<main>
-    <div class="comoayudar">
-    </div>
-    <div class="comoayudar_title">
-    <h1>¿¡NOS QUERES AYUDAR A COMPARTIR LO QUE ENCONTRAS EN LAS CALLES DE MALAGA!?</h1>
-        <p>Si te interesa reducir, reciclar y reutilizar cosas (muebles, artefactos electronicos, herramientas, maquinas,etc.) para evitar contaminar nuestro planeta, tambien te puede interesar ayudar a quienes quieran darle un nuevo uso a esas cosas.<br> Por eso si encontras algo tirado por la calle y queres avisarle a otros de que lo encontraste para que pueda darle una nueva vida,  podes hacer lo siguiente: 
-    </div>
-
-    <section class="etapas">
-
-        
-        <div class="etapa_titulo 1">
-        <h2>PRIMER PASO</h2>
-        <img src="../assets/hazunafoto.gif" alt="gif de como sacar una foto">
-        <p>Hacé una foto del objeto <br> que encontraste en la basura</p>
+    <main>
+        <div class="comoayudar">
         </div>
-        
-        </div>
-        <div class="etapa_titulo 2">        
-        <h2>SEGUNDO PASO</h2>
-        <img src="../assets/indicaubicaicon.gif" alt="gif de ubicacion en el mapa">
-        <p>Indicá en la imagen la ubicacion <br> exacta del producto encontrado</p>
+        <div class="comoayudar_title">
+            <h1>¿¡NOS QUERES AYUDAR A COMPARTIR LO QUE ENCONTRAS EN LAS CALLES DE MALAGA!?</h1>
+            <p>Si te interesa reducir, reciclar y reutilizar cosas (muebles, artefactos electronicos, herramientas,
+                maquinas,etc.) para evitar contaminar nuestro planeta, tambien te puede interesar ayudar a quienes
+                quieran darle un nuevo uso a esas cosas.<br> Por eso si encontras algo tirado por la calle y queres
+                avisarle a otros de que lo encontraste para que pueda darle una nueva vida, podes hacer lo siguiente:
         </div>
 
-        <div class="etapa_titulo 3">
-        <h2>TERCER PASO</h2>
-        <img src="../assets/comparte.gif" alt="gif de persona recuparando el producto">
-        <p>Compartinos la imagen via <br> privado en nuestra cuenta de <br> INSTAGRAM o bien nos podes <br> etiquer en la siguiente direccion @ESTOYENLABASURAMALAGA,<br> asi otra persona que le interese <br> el producto puede pasar a rescatarlo <br>reutilizando el producto y<br>  contaminando menos el planeta</p>
-        </div>
-</section>
+        <section class="etapas">
 
-    <footer class="footer"><!--PIE DE PAGINA-->
-        <nav>
-            <ul>
-                <li>
-                    <a href="../index.html"> INICIO </a>
-                </li>
-                <li>
-                    <a href="../pages/contactanos.html"> CONTACTANOS </a>
-                </li>
-                <li>
-                    <a href="../pages/quienessomos.html"> QUIENES SOMOS </a>
-                </li>
-            </ul>
-        </nav>
+
+            <div class="etapa_titulo 1">
+                <h2>PRIMER PASO</h2>
+                <img src="../assets/hazunafoto.gif" alt="gif de como sacar una foto">
+                <p>Hacé una foto del objeto <br> que encontraste en la basura</p>
+            </div>
+
+            </div>
+            <div class="etapa_titulo 2">
+                <h2>SEGUNDO PASO</h2>
+                <img src="../assets/indicaubicaicon.gif" alt="gif de ubicacion en el mapa">
+                <p>Indicá en la imagen la ubicacion <br> exacta del producto encontrado</p>
+            </div>
+
+            <div class="etapa_titulo 3">
+                <h2>TERCER PASO</h2>
+                <img src="../assets/comparte.gif" alt="gif de persona recuparando el producto">
+                <p>Compartinos la imagen via <br> privado en nuestra cuenta de <br> INSTAGRAM o bien nos podes <br>
+                    etiquer en la siguiente direccion @ESTOYENLABASURAMALAGA,<br> asi otra persona que le interese <br>
+                    el producto puede pasar a rescatarlo <br>reutilizando el producto y<br> contaminando menos el
+                    planeta</p>
+            </div>
+        </section>
+
+        <footer class="footer">
+            <!--PIE DE PAGINA-->
+            <nav>
+                <ul>
+                    <li>
+                        <a href="../index.html"> INICIO </a>
+                    </li>
+                    <li>
+                        <a href="../pages/contactanos.html"> CONTACTANOS </a>
+                    </li>
+                    <li>
+                        <a href="../pages/quienessomos.html"> QUIENES SOMOS </a>
+                    </li>
+                </ul>
+            </nav>
             <div class="footer_redes">
                 <h4>Seguinos en Nuestras Redes</h4>
             </div>
-            <div class="logofooter" >
-                <a  href="https://instagram.com/estoyenlabasuramalaga?igshid=YmMyMTA2M2Y=" target="valor_blank"> <img class="instagram" src="../assets/Logoinstagram.jpeg" alt="Logo Instagram"></a>
+            <div class="logofooter">
+                <a href="https://instagram.com/estoyenlabasuramalaga?igshid=YmMyMTA2M2Y=" target="valor_blank"> <img
+                        class="instagram" src="../assets/Logoinstagram.jpeg" alt="Logo Instagram"></a>
             </div>
-    </footer>
+        </footer>
+        <!--SCRIP de BOOTSTRAP-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+            crossorigin="anonymous"></script>
+
 </body>
 
 
