--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -1,47 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css"> <!--conexion Con CSS-->
+    <link rel="stylesheet" href="../css/style.css"><!--conexion Con CSS-->
+    <!--LINK AL CDN DE BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
     <title>Quienes Somos</title>
 </head>
 
-<body><!--CONTENIDO DE LA PAGINA DONDE TRABAJAREMOS -->
+<body>
+    <!--CONTENIDO DE LA PAGINA DONDE TRABAJAREMOS -->
 
-    <header class="header" id="header"><!--ENCABEZADO/MENU DE NAVEGACION-->
-        <nav>
-            <ul>
-                <li>
-                    <a href="../index.html">INICIO</a>
-                </li>
-                <li>
-                    <a href="../pages/comoayudar.html">COMO AYUDAR</a>
-                </li>
-                <li>
-                    <a href="../pages/contactanos.html">CONTACTANOS</a>
-                </li>
-                <li><img src="../assets/logo.png" alt=""></li>
-            </ul>
+    <header class="header" id="header">
+        <!--ENCABEZADO/MENU DE NAVEGACION-->
+        <nav class="navbar bg-body-tertiary fixed-top ">
+            <div class="container-fluid p-3">
+                <a class="navbar-brand p-3 " href="#">ESTOY EN LA BASURA MáLAGA</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                    aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title p-3 bg-success" id="offcanvasNavbarLabel">ESTOY EN LA BASURA MáLAGA
+                        </h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+
+                    <div class="offcanvas-body text-success">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item p-3 text-success">
+                                <a href="../index.html">INICIO</a>
+                            </li>
+                            <li class="nav-item p-3 text-success">
+                                <a href="../pages/comoayudar.html">COMO AYUDAR</a>
+                            </li>
+                            <li class="nav-item p-3 text-success">
+                                <a href="../pages/contactanos.html">CONTACTANOS</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
         </nav>
     </header>
-    <main class="fondoquienessomos">
-    <div class="titulo_quienessomos">
-    <h1>¿QUIENES SOMOS?</h1>
-    <P>Somos una pareja Argentina que despues de ver la cantidad de cosas reutilizables que se tira en la basura decidimos  crear una cuenta de Instagram sin fines de lucro. Donde tratamos de poner en contacto a personas con muebles (y otros objetos de la basura) que no tienen dueño. <br> Por ese motivo tenemos que entender que la basura contiene una narrativa, muchas historias detrás de ella y una multitud de percepciones que dependen de la categorización.<br>La basura es un lugar, es una cosa, es un concepto… y ahora tambien es nuestra cuenta de Instagram.<br>La cuenta se abrió a mediados del 2022 como un perfil en Instagram llamado <strong>Estoy en la basura Málaga</strong>. <br>La utilidad de la cuenta casi la define el nombre, pero tambien puede definirse perfectamente con la siguiente frase “Málaga es un almacén de oportunidades a cero euros”.<br>Si bien hace 4 años que vivimos en Málaga, en este corto tiempo, nos hemos dado cuenta y llegado a la conclusión de que “cada barrio tiene una historia y la basura la cuenta”. La historia varía en función del Standar de vida de las personas que habitan el barrio y es por eso que  cuando algunas personas consideran que algo perdio la utilidad  otros pueden considerar que aún puede reutilizarlo.
-    </P>
-    </div>
 
-    <div class="ubicacion">
-    <h3>¿DONDE NOS PODES UBICAR?</h3>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.8650779478608!2d-4.414316884905066!3d36.72580147958405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd72f7c3c03e008f%3A0x1ffc04e563607c51!2sC.%20Almagro%2C%201%2C%2029012%20M%C3%A1laga!5e0!3m2!1ses-419!2ses!4v1672054673912!5m2!1ses-419!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
+
+    <main class="fondoquienessomos">
+        <div class="titulo_quienessomos">
+            <h1>¿QUIENES SOMOS?</h1>
+            <P>Somos una pareja Argentina que despues de ver la cantidad de cosas reutilizables que se tira en la basura
+                decidimos crear una cuenta de Instagram sin fines de lucro. Donde tratamos de poner en contacto a
+                personas con muebles (y otros objetos de la basura) que no tienen dueño. <br> Por ese motivo tenemos que
+                entender que la basura contiene una narrativa, muchas historias detrás de ella y una multitud de
+                percepciones que dependen de la categorización.<br>La basura es un lugar, es una cosa, es un concepto… y
+                ahora tambien es nuestra cuenta de Instagram.<br>La cuenta se abrió a mediados del 2022 como un perfil
+                en Instagram llamado <strong>Estoy en la basura Málaga</strong>. <br>La utilidad de la cuenta casi la
+                define el nombre, pero tambien puede definirse perfectamente con la siguiente frase “Málaga es un
+                almacén de oportunidades a cero euros”.<br>Si bien hace 4 años que vivimos en Málaga, en este corto
+                tiempo, nos hemos dado cuenta y llegado a la conclusión de que “cada barrio tiene una historia y la
+                basura la cuenta”. La historia varía en función del Standar de vida de las personas que habitan el
+                barrio y es por eso que cuando algunas personas consideran que algo perdio la utilidad otros pueden
+                considerar que aún puede reutilizarlo.
+            </P>
+        </div>
+
+        <div class="ubicacion">
+            <h3>¿DONDE NOS PODES UBICAR?</h3>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.8650779478608!2d-4.414316884905066!3d36.72580147958405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd72f7c3c03e008f%3A0x1ffc04e563607c51!2sC.%20Almagro%2C%201%2C%2029012%20M%C3%A1laga!5e0!3m2!1ses-419!2ses!4v1672054673912!5m2!1ses-419!2ses"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </main>
 
 
 
-    <footer class="footer" ><!-- PIE DE PAGINA-->
+    <footer class="footer">
+        <!-- PIE DE PAGINA-->
         <nav>
             <ul>
                 <li>
@@ -55,14 +97,18 @@
                 </li>
             </ul>
         </nav>
-            <div class="footer_redes">
-                <h4>Seguinos en Nuestras Redes</h4>
-            </div>
-            <div class="logofooter" >
-                <a  href="https://instagram.com/estoyenlabasuramalaga?igshid=YmMyMTA2M2Y=" target="valor_blank"> <img class="instagram" src="../assets/Logoinstagram.jpeg" alt="Logo Instagram"></a>
-            </div>
+        <div class="footer_redes">
+            <h4>Seguinos en Nuestras Redes</h4>
+        </div>
+        <div class="logofooter">
+            <a href="https://instagram.com/estoyenlabasuramalaga?igshid=YmMyMTA2M2Y=" target="valor_blank"> <img
+                    class="instagram" src="../assets/Logoinstagram.jpeg" alt="Logo Instagram"></a>
+        </div>
     </footer>
-
+    <!--SCRIP de BOOTSTRAP-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 
 </body>
 
